✨ Migrate Auth from base to auth-service / Add auth service to api-gateway / Update security logic in base service